test/grammar/schema/init/init_kwargs_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:4:17
  |
4 | person = Person(_naem="Alice") {}
  |                 ^ "Person" got an unexpected keyword argument '_naem', did you mean '_name'?
  |

error[E2L23]: CompileError
 --> ${CWD}/main.k:4:10
  |
4 | person = Person(_naem="Alice") {}
  |          ^ expected 1 positional argument, found 0
  |
